Fixed css issue for cvv label covering input field on multi frames at small widths.

--- a/view/frontend/web/css/frames/multi.css
+++ b/view/frontend/web/css/frames/multi.css
@@ -156,4 +156,11 @@
     font-size: .9rem;
     font-family: monospace;
 }
+
+@media screen and (max-width: 407px){
+    #checkoutcom_card_payment_frm .date-and-code label {
+        height: 28px;
+        line-height: 15px;
+    }
+}
   
